Fix the height of select on safari

--- a/styles/RateDropdown.css
+++ b/styles/RateDropdown.css
@@ -4,6 +4,7 @@
 }
 
 .RateDropdown > select {
+  -webkit-appearance: menulist-button;
   cursor: pointer;
   height: 100%;
   left: 0;
